k8s/base/backend-weighted/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-1
  labels:
    app: backend-1
    service: backend-1
spec:
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  selector:
    app: backend-1
---
apiVersion: v1
kind: Service
metadata:
  name: backend-2
  labels:
    app: backend-2
    service: backend-2
spec:
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  selector:
    app: backend-2
