k8s/base/backend-weighted/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend-weighted
spec:
  parentRefs: 
    - name: envoy-gateway
  hostnames: []
  rules: 
    - backendRefs:  
        - group: ""
          kind: Service
          name: backend-1
          port: 3000
          weight: 50
        - group: ""
          kind: Service
          name: backend-2
          port: 3000
          weight: 50
      matches:
        - path:
            type: PathPrefix
            value: /
